app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app-deployment
  labels:
    app: hello-world-app
spec:
  replicas: 3  
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
      - name: hello-world-app
        image: furkansenol/hub-image-example:latest
        ports:
        - containerPort: 5000
