app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app-service
spec:
  type: NodePort
  selector:
    app: hello-world-app
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000
      nodePort: 30000
