app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
    - host: localhost
      http:
        paths:
          - path: /hello-world-app
            pathType: Prefix
            backend:
              service:
                name: hello-world-app-service
                port:
                  number: 80
